TW-47493 VCS URLs with git protocol prefix are now parsed correctly (cherry picked from commit ba17b09)